# bevy_pmetra

./: .gitignore  Cargo.lock.backup  Cargo.toml  JUSTFILE  README.md  Trunk.toml  index.html  tailwind.config.js
.cargo/: config.toml
crates/: README.md
crates/bevy_pmetra/: Cargo.toml
crates/parametric_cad_modelling/: Cargo.toml
crates/parametric_cad_modelling/src/: bevy_mesh.rs  constants.rs  lib.rs  math.rs
crates/parametric_cad_modelling/src/bevy_plugin/: cleanup_manager.rs  lazy_plugins.rs  mod.rs  plugins.rs  resources.rs
crates/parametric_cad_modelling/src/bevy_plugin/components/: async_tasks.rs  cad.rs  dummy_test.rs  mod.rs  wire_frame.rs
crates/parametric_cad_modelling/src/bevy_plugin/events/: cad.rs  cursor.rs  lazy_cad.rs  mod.rs
crates/parametric_cad_modelling/src/bevy_plugin/systems/: mod.rs
crates/parametric_cad_modelling/src/bevy_plugin/systems/cad/: architecture.d2  cursor.rs  mesh.rs  mod.rs  model.rs  outlines.rs  params_ui.rs  system_design.d2
crates/parametric_cad_modelling/src/bevy_plugin/systems/lazy_cad/: cursor.rs  mesh.rs  mod.rs  model.rs  params_ui.rs
crates/parametric_cad_modelling/src/cad_core/: centroid.rs  mod.rs
crates/parametric_cad_modelling/src/cad_core/builders/: architecture.d2  cursors.rs  faces.rs  materials.rs  meshes.rs  mod.rs  shells.rs  tags.rs
crates/parametric_cad_modelling/src/cad_core/extensions/: face.rs  mod.rs  shell.rs  standard_material.rs  wire.rs
crates/parametric_cad_modelling/src/cad_core/lazy_builders/: meshes.rs  mod.rs  shells.rs
crates/parametric_cad_modelling/src/cad_core/tessellation/: mod.rs  triangulation.rs
crates/pmetra_internal/: Cargo.toml
crates/pmetra_internal/src/: bevy_mesh.rs  lib.rs
crates/pmetra_internal/src/bevy_plugin/: plugins.rs
crates/pmetra_internal/src/bevy_plugin/systems/: wire_frame.rs
crates/pmetra_internal/src/bevy_plugin/systems/cad/: cursor.rs  mesh.rs  model.rs  outlines.rs  params_ui.rs
crates/pmetra_internal/src/cad_core/: dimensions.rs
crates/pmetra_internal/src/cad_core/builders/: cursors.rs  meshes.rs  mod.rs
crates/pmetra_internal/src/cad_core/extensions/: polygon_mesh.rs  wire.rs
crates/pmetra_internal/src/cad_core/tessellation/: mod.rs
crates/pmetra_internal/src/pmetra_core/: dimensions.rs  meshing.rs
crates/pmetra_internal/src/pmetra_core/builders/: meshes.rs  mod.rs  shells.rs  sliders.rs  tags.rs
crates/pmetra_internal/src/pmetra_core/extensions/: face.rs  mod.rs  polygon_mesh.rs  transform.rs
crates/pmetra_internal/src/pmetra_core/tessellation/: mod.rs  triangulation.rs
crates/pmetra_internal/src/pmetra_plugins/: cleanup_manager.rs  mod.rs  plugins.rs  resources.rs
crates/pmetra_internal/src/pmetra_plugins/components/: cad.rs  camera.rs  params_ui.rs  wire_frame.rs
crates/pmetra_internal/src/pmetra_plugins/events/: cad.rs  mod.rs  slider.rs
crates/pmetra_internal/src/pmetra_plugins/systems/: gizmos.rs  mod.rs  wire_frame.rs
crates/pmetra_internal/src/pmetra_plugins/systems/cad/: cursor.rs  mesh.rs  mod.rs  model.rs  outlines.rs  params_ui.rs  root.rs  settings.rs  slider.rs
examples/: simple_cube.rs
pmetra_demo/: Cargo.toml
pmetra_demo/assets/: README.md
pmetra_demo/src/: lib.rs  main.rs  plugin.rs  resources.rs
pmetra_demo/src/plugins/: mod.rs  my_bevy_defaults.rs  origin_axis_gizmo.rs
pmetra_demo/src/plugins/fps_display/: mod.rs  plugin.rs  systems.rs
pmetra_demo/src/plugins/gltf_exporter/: mod.rs  plugin.rs
pmetra_demo/src/plugins/gltf_exporter/gltf/: converters.rs  mod.rs
pmetra_demo/src/systems/: cad.rs  info_ui.rs  inspector.rs  mod.rs  orbit_cam.rs  rapier.rs  scene.rs  window.rs
pmetra_demo/src/utils/: mod.rs
pmetra_demo/src/utils/cad_models/: mod.rs
pmetra_demo/src/utils/cad_models/mechanical_parts/: mod.rs
pmetra_demo/src/utils/cad_models/mechanical_parts/lazy_simple_gear/: gear.rs  math.rs  mod.rs
pmetra_demo/src/utils/cad_models/mechanical_parts/simple_gear/: gear.rs  mod.rs
pmetra_demo/src/utils/cad_models/reference/: basic_shape_ops.rs  mod.rs
pmetra_demo/src/utils/cad_models/simple_primitives/: mod.rs
pmetra_demo/src/utils/cad_models/simple_primitives/exp_nurbs/: mod.rs  nurbs_surface.rs
pmetra_demo/src/utils/cad_models/simple_primitives/exp_nurbs_solid/: cylinder.rs  mod.rs  nurbs_surface.rs
pmetra_demo/src/utils/cad_models/simple_primitives/lazy_cube_at_cylinder/: cube.rs  mod.rs
pmetra_demo/src/utils/cad_models/simple_primitives/simple_cube_at_cylinder/: cube.rs  cylinder.rs  mod.rs
pmetra_demo/src/utils/cad_models/simple_primitives/simple_lazy_cube_at_cylinder/: cube.rs  cylinder.rs  mod.rs
pmetra_demo/src/utils/cad_models/space_station/: common.rs  mod.rs  round_rect_cuboid.rs
pmetra_demo/src/utils/cad_models/space_station/lazy_round_cabin_segment/: cabin.rs  mod.rs
pmetra_demo/src/utils/cad_models/space_station/lazy_tower_extension/: beams.rs  common.rs  cuboid_enclosure.rs  mod.rs  straight_beam.rs
pmetra_demo/src/utils/cad_models/space_station/round_cabin_segment/: cabin.rs  end_walls.rs  mod.rs
pmetra_demo/src/utils/cad_models/space_station/tower_extension/: beams.rs  cuboid_enclosure.rs  mod.rs
src/: lib.rs
web/: styles.css
