[package]
name = "bevy_pmetra"
description = "Parametric Modelling for Bevy using Truck CAD kernel."
version = "0.2.1"
edition = "2021"
authors = ["Nilay Savant"]
categories = [
    "bevy",
    "parametric",
    "CAD",
    "procedural",
    "mesh",
    "3D",
    "graphics",
]
exclude = ["assets/", ".github/"]
keywords = [
    "bevy",
    "parametric",
    "CAD",
    "procedural",
    "mesh",
    "3D",
    "gamedev",
    "graphics",
]
license = "MIT OR Apache-2.0"
readme = "README.md"

[workspace]
resolver = "2"
members = ["crates/*", "pmetra_demo"]

[dependencies]
pmetra_internal = { path = "crates/pmetra_internal" }

[dev-dependencies]
bevy = "0.14"
# smooth-bevy-cameras = "0.11" // Use the git version for now as crate is not updated. As below.
smooth-bevy-cameras = { git = "https://github.com/bonsairobo/smooth-bevy-cameras", rev = "414fa90d1f0c4a95efbaa5f5cf5839b5c904966d" }
bevy_egui = "0.28"
bevy-inspector-egui = "0.25"


# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1
