[package]
name = "pmetra_demo"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
dev = ["bevy/dynamic_linking", "bevy/trace", "bevy/file_watcher"]

[dependencies]
bevy = "0.16"
# TODO: Use latest commit of bevy_rapier3d until the crate is released for Bevy 0.16...
bevy_rapier3d = { git = "https://github.com/dimforge/bevy_rapier", rev = "07e1c5273d4c31cd43db1b0791eb5a7723becd4e" }
smooth-bevy-cameras = "0.14"
bevy_egui = "0.34"
bevy-inspector-egui = "0.31"
strum = { version = "0.25", features = ["derive"] }
itertools = "0.12"
# gltf exporter
gltf = { version = "1.3", features = [
    "extras",
    "image",
    "KHR_texture_transform",
    "KHR_materials_specular",
    "KHR_materials_variants",
    "KHR_materials_unlit",
    "KHR_lights_punctual",
    "KHR_materials_pbrSpecularGlossiness",
    "KHR_materials_volume",
    "KHR_materials_ior",
    "KHR_materials_transmission",
    "guess_mime_type",
] }
image = "0.24"
base64 = "0.21"
# workspace crates...
bevy_pmetra = { path = "../" }
