[package]
name = "pmetra_demo"
version = "0.6.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
dev = ["bevy/dynamic_linking", "bevy/trace", "bevy/file_watcher"]

[dependencies]
bevy = "0.17"
bevy_rapier3d = "0.32"
# TODO: Update to once published to crates.io
smooth-bevy-cameras = { git = "https://github.com/bonsairobo/smooth-bevy-cameras", rev = "1d0da095c73d9706bb86b79ea2ff20b2011b019b" }
bevy_egui = "0.38"
bevy-inspector-egui = "0.35"
strum = { version = "0.28", features = ["derive"] }
itertools = "0.12"
# gltf exporter
gltf = { version = "1.3", features = [
    "extras",
    "image",
    "KHR_texture_transform",
    "KHR_materials_specular",
    "KHR_materials_variants",
    "KHR_materials_unlit",
    "KHR_lights_punctual",
    "KHR_materials_pbrSpecularGlossiness",
    "KHR_materials_volume",
    "KHR_materials_ior",
    "KHR_materials_transmission",
    "guess_mime_type",
] }
image = "0.24"
base64 = "0.21"
# workspace crates...
bevy_pmetra = { path = "../" }
