[package]
name = "pmetra_demo"
version = "0.6.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
dev = ["bevy/dynamic_linking", "bevy/trace", "bevy/file_watcher"]

[dependencies]
bevy = "0.18"
bevy_rapier3d = "0.33"
# TODO: Update to once published to crates.io
smooth-bevy-cameras = { git = "https://github.com/nilaysavant/smooth-bevy-cameras", rev = "8998a69f2509b3b55d00e039043a58c5aba0e8c7" }
bevy_egui = "0.39"
bevy-inspector-egui = "0.36"
strum = { version = "0.28", features = ["derive"] }
itertools = "0.12"
# gltf exporter
gltf = { version = "1.3", features = [
    "extras",
    "image",
    "KHR_texture_transform",
    "KHR_materials_specular",
    "KHR_materials_variants",
    "KHR_materials_unlit",
    "KHR_lights_punctual",
    "KHR_materials_pbrSpecularGlossiness",
    "KHR_materials_volume",
    "KHR_materials_ior",
    "KHR_materials_transmission",
    "guess_mime_type",
] }
image = "0.24"
base64 = "0.21"
# workspace crates...
bevy_pmetra = { path = "../" }
