[package]
name = "pmetra_internal"
version = "0.4.0"
edition = "2021"
authors = ["Nilay Savant"]
description = "Internal crate for bevy_pmetra."


[dependencies]
bevy = { version = "0.16", default-features = false, features = [
    "std",
    "async_executor",
    "bevy_pbr",
    "bevy_render",
    "bevy_text",
    "bevy_ui",
    "multi_threaded",
    "bevy_gizmos",
    "bevy_color",
    "default_font",
    # Picking features...
    "bevy_picking",
    "bevy_mesh_picking_backend",
    # `Window` required for bevy_picking deselect all.
    "bevy_window",
] }
anyhow = "1.0"
strum = { version = "0.25", features = ["derive"] }
# truck stuff
truck-modeling = { git = "https://github.com/nilaysavant/truck.git", tag = "pmetra.v0.1.0" }
truck-shapeops = { git = "https://github.com/nilaysavant/truck.git", tag = "pmetra.v0.1.0" }
truck-meshalgo = { git = "https://github.com/nilaysavant/truck.git", tag = "pmetra.v0.1.0" }
truck-topology = { git = "https://github.com/nilaysavant/truck.git", tag = "pmetra.v0.1.0" }
truck-base = { git = "https://github.com/nilaysavant/truck.git", tag = "pmetra.v0.1.0" }
# truck deps for custom adaptation...
rustc-hash = "1.1.0"
# async
bevy_async_task = "0.8"
