[package]
name = "pmetra_internal"
version = "0.4.0"
edition = "2021"
authors = ["Nilay Savant"]
description = "Internal crate for bevy_pmetra."


[dependencies]
bevy = { version = "0.16", default-features = false, features = [
    "std",
    "async_executor",
    "bevy_pbr",
    "bevy_render",
    "bevy_text",
    "bevy_ui",
    "multi_threaded",
    "bevy_gizmos",
    "bevy_color",
    "default_font",
    # Picking features...
    "bevy_picking",
    "bevy_mesh_picking_backend",
    # `Window` required for bevy_picking deselect all.
    "bevy_window",
] }
anyhow = "1.0"
strum = { version = "0.25", features = ["derive"] }
# truck stuff
truck-modeling = { git = "https://github.com/nilaysavant/truck.git", rev = "5982eb361999ab8b7f537f39b401fb210a1d537b" }
truck-shapeops = { git = "https://github.com/nilaysavant/truck.git", rev = "5982eb361999ab8b7f537f39b401fb210a1d537b" }
truck-meshalgo = { git = "https://github.com/nilaysavant/truck.git", rev = "5982eb361999ab8b7f537f39b401fb210a1d537b" }
truck-topology = { git = "https://github.com/nilaysavant/truck.git", rev = "5982eb361999ab8b7f537f39b401fb210a1d537b" }
truck-base = { git = "https://github.com/nilaysavant/truck.git", rev = "5982eb361999ab8b7f537f39b401fb210a1d537b" }
# truck deps for custom adaptation...
rustc-hash = "1.1.0"
# async
bevy_async_task = "0.8"
